confined to single page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div id="container">
+      <div id="trialsleft"></div>
       <div id="score">score: <span id="scorevalue">0</span></div>
       <div id="fruitcontainer">
         <img src="" alt="" id="fruit1" class="fruit" />
@@ -20,7 +21,7 @@
 
       <div id="startreset">Start Game</div>
     </div>
-    <div id="trialsleft"></div>
+    <!-- <div id="trialsleft"></div> -->
     <div id="gameover"></div>
     <audio id="slicesound" src="audio/blowair.mp3"></audio>
   </body>
