small instruction change

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="fruitcontainer">
         <img src="" alt="" id="fruit1" class="fruit" />
       </div>
-      <div id="instruction">Cut fruits</div>
+      <div id="instruction">Cut fruits<span style="font-size: small;">(by hovering over them)</span></div>
 
       <div id="startreset">Start Game</div>
     </div>
